add recommendation, replace nyc img

--- a/field-research.html
+++ b/field-research.html
@@ -1,4 +1,5 @@
 <!--nyc.jpg from https://storage.needpix.com/rsynced_images/architecture-1839097_1280.jpg-->
+<!--park.jpg from https://www.wallpaperflare.com/united-states-prospect-park-leave-leaf-new-york-nyc-new-york-city-wallpaper-epvhu-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -124,11 +125,11 @@
       <div class="container">
         <div class="row">
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a class="image image-2 order-2" style="background-image: url('images/nyc.jpg');" data-scrollax=" properties: { translateY: '-20%'}"></a>
+            <a class="image image-2 order-2" style="background-image: url('images/park.jpg');" data-scrollax=" properties: { translateY: '-20%'}"></a>
             <div class="text order-1">
               <h4 class="subheading">Where did we go?</h4>
               <h2 class="heading">Locations</h2>
-              <p>To distribute surveys, we chose locations that were accessible to all New York City residents: <strong>Prospect Park</strong> and <strong>Atlantic Terminal</strong>. The Long Meadow, the Lake, the Carousel, and the park's perimeter are some the attractions we visited. At Altantic Terminal, we visited the downtown R, N, & D trains platform, the Long Island Railroad, and the station's tunnel.</p>
+              <p>To distribute surveys, we chose locations that were accessible to all New York City residents: <strong>Prospect Park</strong> and <strong>Atlantic Terminal</strong>. The Long Meadow, the Lake, the Carousel, and the park's perimeter are some the attractions we visited. At Atlantic Terminal, we visited the downtown R, N, & D trains platform, the Long Island Railroad, and the station's tunnel.</p>
             </div>
           </div>
         </div>
@@ -140,7 +141,7 @@
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
             <h2>Spreadsheet</h2>
-            <p>We recorded our survey data. Feel free to take a peek.</p>
+            <p>We recorded our survey data. Feel free to take a peek. We recommend looking at the charts first.</p>
           </div>
           <center class="col-sm-12"><iframe class="embed-responsive" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTnWrDQxhy9lzJlG-DWA7eyjqGqpyIvjPINpOpjwBxEdgRh_17gYcdnueAiNvF6k-CMQ9k6RAcRPnS9/pubhtml?widget=true&amp;headers=false" height="500"></iframe></center>
           <!-- width="400" height="500"-->
