--- a/index.html
+++ b/index.html
@@ -190,7 +190,6 @@
     </section>
     </div>
 
-
     <section class="ftco-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
@@ -248,6 +247,25 @@
         <!--</div>-->
       </div>
     </section>
+
+    <div class="bg-light">
+      <section class="ftco-section-featured ftco-section-featured-2 ftco-animate">
+        <div class="container-fluid" data-scrollax-parent="true">
+          <div class="row mt-5 d-flex justify-content-center">
+            <div class="col-md-8 text-center heading-section ftco-animate">
+              <h2 class="h1">Recommendation</h2>
+              <p>In an effort to lower the rates of vaccination exemptions and spread awareness, we plan to:
+                <ul>
+                  <li>Hold school lesssons/workshops for students and parents by organizing a vaccine lesson plan into a presentation to be delivered to classes and schedule meetings with school administrators and select staff members for approval and implementation</li>
+                  <li>Implementing mandatory vaccine education to all NYC students by gathering signatures for our petition and addressing the relevance of this quality of life issue to the New York City Department of Education.</li>
+                </ul>
+              </p>
+              <!--<p><a href="#" class="btn btn-primary mt-3 py-3 px-5">Get in touch</a></p>-->
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
 
     <!--<section class="ftco-section-parallax">-->
     <!--  <div class="parallax-img d-flex align-items-center">-->
